kubernetes/nginx-custom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-custom-deployment
  labels:
    app: nginx-custom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-custom
  template:
    metadata:
      labels:
        app: nginx-custom
    spec:
      containers:
      - name: nginx-custom
        image: jehudson/pi-custom-nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-deployment-service
spec:
  selector:
    app: nginx-custom
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-custom-deployment-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  rules:
  - host: www.vocalissimo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom-deployment-service
            port:
              number: 80
  - host: vocalissimo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom-deployment-service
            port:
              number: 80
  - host: www.vocalissimo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom-deployment-service
            port:
              number: 443
  - host: vocalissimo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom-deployment-service
            port:
              number: 443

  tls:
  - hosts:
    - www.vocalissimo.org 
    secretName: www-vocalissimo-org-tls
  - hosts:
    - vocalissimo.org
    secretName: vocalissimo-org-tls
